@@ -1,3 +1,8 @@
+2020-04-01  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+        * inst/include/Rcpp/config.h: Idem
+
 2020-03-31  Dirk Eddelbuettel  <edd@debian.org>
 
 	* docker/ci-dev/Dockerfile: Also install the 'codetools' package
@@ -5,6 +10,10 @@
 2020-03-31 Kevin Ushey  <kevin@rstudio.com>
 
 	* R/Attributes.R: Fix for sourceCpp() on Windows w/R-devel
+
+2020-03-28  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/examples/RcppGibbs/RcppGibbs_Updated.R: Updated example
 
 2020-03-24  Dirk Eddelbuettel  <edd@debian.org>
 
